	* Download and install Collect.apk
	* Start Collect
	* Choose your downloaded .collect-mobile file in the file chooser


Install an update
-----------------

    * Stop Collect if it's running
    * Clear data (this will removed any previously collected data)
    * Download and install Collect.apk
    * Start Collect
    * Choose your .collect-mobile file in the file chooser


Changes
-------

2015-04-14
    * Added support for multiple surveys

2015-03-19
    * Added support for latest Collect Desktop version
    * Fixed problem with validation of code attributes with multiplicity, rendered as checkboxes

2014-11-17

    * Fixed bug that could cause crash when initializing taxon attribute

2014-11-04

    * Added support for capturing and selecting images

2014-10-24

    * Fixed bug that crashed surveys with enumerated entities

2014-10-22

    * Fixed broken scrolling in older Android versions
    * Fixed overlapping radio buttons/checkboxes in older Android versions
    * Fixes to relevance and validation state

2014-10-20

    * Ignored irrelevant child nodes when determining an entity's validation status

2014-10-17

    * Changed the way records/entities are deleted. Using checkboxes and contextual action mode for deletion
    * Made sure node state is updated when related nodes are deleted

2014-10-16

    * Fixed bug where statuses in entity lists weren't updated immediately

2014-10-15

    * Fixed crash when exporting data

2014-10-09

    * Fixed survey import when a survey already is imported
    * Added confirmation dialog when importing survey when data already is entered
    * Included a demo survey, that will load at start-up, when no other survey is imported
    * Migrate database when importing survey from older Collect Server version

2014-09-26

    * Supported new format on .collect-mobile files
    * Verified that the Collect version used to export a survey is supported by Collect Mobile

2014-09-17
