@@ -15,7 +15,7 @@ repositories {
 }
 
 dependencies {
-    compile('org.openforis.collect:collect-core:3.4.5') {
+    compile('org.openforis.collect:collect-core:3.5.0') {
         exclude group: 'commons-jxpath'
     }
     compile 'commons-jxpath:commons-jxpath:1.3'
